# CodeForcesClone

backend-judge/: .gitignore  Cargo.toml  Rocket.toml  diesel.toml
backend-judge/data/1b318154-f914-4bd8-83f3-d9be76a21a66/problem_2/: problem.md
backend-judge/data/e71318af-fbc7-4035-b351-56ae492e41b6/problem_2/: solution.cpp  validator.out
backend-judge/data/e71318af-fbc7-4035-b351-56ae492e41b6/problem_5/: validator.out
backend-judge/migrations/2024-06-07-044306_user/: up.sql
backend-judge/migrations/2024-06-09-125117_contest/: down.sql  up.sql
backend-judge/migrations/2024-06-17-123849_contests/: down.sql  up.sql
backend-judge/migrations/2024-06-17-125829_problems/: up.sql
backend-judge/migrations/2024-06-26-110509_submissions/: down.sql  up.sql
backend-judge/migrations/2024-06-27-163648_test_results/: up.sql
backend-judge/migrations/2024-07-15-143139_test_cases/: down.sql  up.sql
backend-judge/src/: auth.rs  check.rs  contest_utils.rs  database.rs  main.rs  models.rs  responses.rs  schema.rs  submission_utils.rs  utils.rs
backend-judge/src/routes/: contests.rs  problems.rs  submissions.rs  users.rs
frontend-judge/: package-lock.json  package.json  svelte.config.js  test.html
frontend-judge/src/: app.html
frontend-judge/src/lib/: auth_styles.css  contest_styles.css  error_dialog.svelte  global_styles.css  prism.python.min.js  submission_details.svelte  utils.ts
frontend-judge/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  Header.svelte  styles.css
(+23 files in other folders)
