[package]
name = "backend-judge"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres"]}
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
shuttle-rocket = "0.45.0"
shuttle-runtime = "0.45.0"
tokio = "1.26.0"
serde = { version = "1.0.203", features = ["derive"] }
