[package]
name = "backend-judge"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.34", features = ["serde", "clock"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"]}
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
shuttle-rocket = "0.45.0"
shuttle-runtime = "0.45.0"
serde = { version = "1.0.203", features = ["derive"] }
pwhash = "1.0.0"
jsonwebtoken = "9.2.0"
tokio = { version = "1.26.0", features = ["macros",  "sync", "time"] }
config = "0.14.0"
uuid = "1.8.0"
zip = "2.1.3"
